--- a/readme
+++ b/readme
@@ -1,3 +1,10 @@
+Create symlinks between dotfiles and vimfiles
+```
+cd ~
+ln -s dotfiles/vimrc .vimrc
+ln -s dotfiles/.vim .vim
+```
+
 to get fzf working, you need both of the following lines: 
 Plugin 'junegunn/fzf'
 Plugin 'junegunn/fzf.vim'
